--- a/index.html
+++ b/index.html
@@ -532,6 +532,14 @@
                                         <p style="text-align:center;">Software de migração automatizado.</p>
                                     </div>
 
+                                    <div class="col-sm-4 col-md-2 subpage-block">
+                                        <div class="client-block">
+                                            <img src="images/clients/client_9.png" title="SMC LIGHT" alt="image" class="mCS_img_loaded">
+                                        </div>
+                                        <h5 style="text-align:center;">SMC LIGHT</h5>
+                                        <p style="text-align:center;">Sistema de emissão de documentos fiscais e gestão financeira.</p>
+                                    </div>
+
                                 </div>
 
 
