--- a/index.html
+++ b/index.html
@@ -722,6 +722,19 @@
                                         </figure>
                                         <!-- /Portfolio Item 8 -->
 
+                                        <!-- Portfolio Item 9 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/9.jpg" class="lightbox" title="Formação Node.js">
+                                                <img src="images/portfolio/9.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Formação Node.js</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 9 -->
+
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
                                             <a href="images/portfolio/10.jpg" class="lightbox" title="Hotel Rinkão">
