--- a/index.html
+++ b/index.html
@@ -275,6 +275,15 @@
                                                     <p class="item-description">ADVPL - Boas práticas de programação.</p>
                                                 </div>
                                                 <!-- / Education 9 -->
+
+                                                <!-- Education 10 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Formação Node.js</p>
+                                                </div>
+                                                <!-- / Education 10 -->
                                             </div>
                                         </div>
                                     </div>
