--- a/index.html
+++ b/index.html
@@ -276,6 +276,15 @@
                                                 </div>
                                                 <!-- / Education 9 -->
 
+                                                <!-- Education 9.1 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">React do zero a maestria.</p>
+                                                </div>
+                                                <!-- / Education 9.1 -->
+
                                                 <!-- Education 10 -->
                                                 <div class="timeline-item">
                                                     <h4 class="item-title">Curso de Especialização</h4>
@@ -743,6 +752,19 @@
                                             </a>
                                         </figure>
                                         <!-- /Portfolio Item 9 -->
+
+                                        <!-- Portfolio Item 10 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/11.jpg" class="lightbox" title="Formação React">
+                                                <img src="images/portfolio/11.jpg" alt="">
+                                                <div>
+                                                    <h5 class="name">Formação React</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 10 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
