--- a/index.html
+++ b/index.html
@@ -293,6 +293,24 @@
                                                     <p class="item-description">Formação Node.js</p>
                                                 </div>
                                                 <!-- / Education 10 -->
+
+                                                <!-- Education 11 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Formação PHP Maestria</p>
+                                                </div>
+                                                <!-- / Education 11 -->
+
+                                                <!-- Education 12 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2022</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Formação Flutter</p>
+                                                </div>
+                                                <!-- / Education 12 -->
                                             </div>
                                         </div>
                                     </div>
@@ -753,7 +771,7 @@
                                         </figure>
                                         <!-- /Portfolio Item 9 -->
 
-                                        <!-- Portfolio Item 10 -->
+                                        <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["cursos"]'>
                                             <a href="images/portfolio/11.jpg" class="lightbox" title="Formação React">
                                                 <img src="images/portfolio/11.jpg" alt="">
@@ -764,7 +782,33 @@
                                                 </div>
                                             </a>
                                         </figure>
-                                        <!-- /Portfolio Item 10 -->
+                                        <!-- /Portfolio Item 11 -->
+
+                                        <!-- Portfolio Item 12 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/12.jpeg" class="lightbox" title="Formação Flutter">
+                                                <img src="images/portfolio/12.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Criação de Apps - Flutter</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 12 -->
+
+                                        <!-- Portfolio Item 13 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/13.jpeg" class="lightbox" title="Formação PHP Maestria">
+                                                <img src="images/portfolio/13.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">PHP Maestria</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 13 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
