--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                                                 e entusiastas com tópicos acadêmicos como engenharia de software, arquitetura de software, qualidade de software e assim por diante. Tenho uma sólida formação em bancos de dados relacionais, linguagens OOP
                                                 como Delphi.</p>
                                         </div>
-                                        <div class="download-resume">
+                                      <!--  <div class="download-resume">
                                             <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
-                                        </div>
+                                        </div>-->
                                     </div>
 
                                     <div class="col-sm-6 col-md-6 col-lg-6">
