--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                                     </div>
                                 </div> -->
 
-                                <!-- Download Resume Button -->
+                                <!-- Download Resume Button 
                                 <div class="row">
                                     <div class="col-sm-12 col-md-12 col-lg-12">
                                         <div class="block">
@@ -417,7 +417,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- End of Download Resume Button -->
+                                 End of Download Resume Button -->
 
                             </div>
                         </div>
