--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="js/tradutor.js"></script>
     <script type="text/javascript" src="js/wnv.js"></script>
+    <style>
+        #google_translate_element,
+.goog-te-banner-frame,
+.goog-te-balloon-frame,
+#goog-gt-tt,
+.goog-te-balloon-frame,
+.goog-tooltip,
+.goog-tooltip:hover {
+ display:none !important;
+}
+
+    </style>
 </head>
 
 <body class="material-template" onload="calcularIdade('08/01/1987'); disponivel(); temposervico('08/01/2005');">
@@ -61,6 +74,19 @@
                         <li>
                             <a class="pt-trigger" href="#portfolio">Portfólio</a>
                             <!--index.html#portfolio-->
+                        </li>
+                        <li>
+                            <div id="google_translate_element"></div>
+                            <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+                            <li>
+                                <a href="javascript:;" class="pt" onclick="ChangeLang('pt')" title="Traduzir para portugu&ecirc;s"><img width="16px" height="16px" src="images/idioma/brasil-1.png" /></a>
+                            </li>
+                            <li>
+                                <a href="javascript:;" class="en" onclick="ChangeLang('en')" title="Translate to English"><img width="16px" height="16px" src="images/idioma/usa.png" /></a>
+                            </li>
+                            <li>
+                                <a href="javascript:;" class="it" onclick="ChangeLang('it')" title="Traduci in italiano"><img width="18px" height="18px" src="images/idioma/it.png" /></a>
+                            </li>
                         </li>
                     </ul>
                     <!-- /Main menu -->
@@ -866,7 +892,6 @@
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="js/jquery.googlemap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
 </body>
 
 </html>
