--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
                                             <div class="block-title">
                                                 <h3>Um pouco sobre <span>mim</span></h3>
                                             </div>
-                                            <p>Olá, sou um desenvolvedor back-end apaixonado por novas tecnologias e como elas podem ajudar a tornar nossas vidas melhores. Sou Licenciado em Sistemas de Informação, Curso Técnico em Informática e trabalhei
-                                                durante todo o período de estudo, acumulando <text id="servico"></text> anos de experiência na área de Informática. Já trabalhei em várias funções, de DevOps a desenvolvedor web, fornecendo soluções para
-                                                vários problemas sem estar preso a uma tecnologia específica. Com experiência de trabalho em diferentes ambientes como pequena e média empresa. Um aluno constante que gosta de misturar tecnologias novas
-                                                e entusiastas com tópicos acadêmicos como engenharia de software, arquitetura de software, qualidade de software e assim por diante. Tenho uma sólida formação em bancos de dados relacionais, linguagens OOP
-                                                como Delphi.</p>
+                                            <p>Olá! Sou um entusiasta desenvolvedor back-end, apaixonado por explorar novas tecnologias que possam aprimorar a qualidade de vida. Possuo formação em Sistemas de Informação e um Curso Técnico em Informática, conciliando estudos com experiência prática ao longo de <text id="servico"></text> anos na área de Informática. Durante esse período, desempenhei diversas funções, desde DevOps até desenvolvimento web, oferecendo soluções inovadoras para uma variedade de desafios, sem me restringir a uma única tecnologia.
+
+Minha trajetória profissional abrange ambientes diversos, desde pequenas até médias empresas, proporcionando uma visão abrangente do cenário tecnológico. Sou um aluno contínuo, apaixonado por mesclar tecnologias emergentes com tópicos acadêmicos, como engenharia de software, arquitetura de software, qualidade de software, entre outros.
+
+Possuo uma base sólida em bancos de dados relacionais e domino linguagens orientadas a objetos, como Delphi. Estou sempre em busca de desafios estimulantes e oportunidades para aplicar meu conhecimento e habilidades em prol do desenvolvimento tecnológico.</p>
                                         </div>
                                       <!--  <div class="download-resume">
                                             <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
