Sped Fiscal (EFD ICMS/IPI)

--- a/index.html
+++ b/index.html
@@ -332,6 +332,15 @@ Possuo uma base sólida em bancos de dados relacionais e domino linguagens orien
                                                     <p class="item-description">Formação Flutter</p>
                                                 </div>
                                                 <!-- / Education 12 -->
+
+                                                <!-- Education 13 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2024</span>
+                                                    <span class="item-small">Udemy</span>
+                                                    <p class="item-description">Formação Sped Fiscal (EFD ICMS/IPI).</p>
+                                                </div>
+                                                <!-- / Education 13 -->
                                             </div>
                                         </div>
                                     </div>
@@ -830,6 +839,19 @@ Possuo uma base sólida em bancos de dados relacionais e domino linguagens orien
                                             </a>
                                         </figure>
                                         <!-- /Portfolio Item 13 -->
+
+                                        <!-- Portfolio Item 14 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/14.jpeg" class="lightbox" title="Formação Sped Fiscal (EFD ICMS/IPI)">
+                                                <img src="images/portfolio/14.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Sped Fiscal (EFD ICMS/IPI)</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 14 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
