--- a/index.html
+++ b/index.html
@@ -336,11 +336,38 @@ Possuo uma base sólida em bancos de dados relacionais e domino linguagens orien
                                                 <!-- Education 13 -->
                                                 <div class="timeline-item">
                                                     <h4 class="item-title">Curso de Especialização</h4>
-                                                    <span class="item-period">2024</span>
+                                                    <span class="item-period">2023</span>
                                                     <span class="item-small">Udemy</span>
                                                     <p class="item-description">Formação Sped Fiscal (EFD ICMS/IPI).</p>
                                                 </div>
                                                 <!-- / Education 13 -->
+
+                                                <!-- Education 14 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2023</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Formação Web e Front-End.</p>
+                                                </div>
+                                                <!-- / Education 14 -->
+
+                                                <!-- Education 15 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2023</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Formação Arquitetura .NET.</p>
+                                                </div>
+                                                <!-- / Education 15 -->
+
+                                                <!-- Education 16 -->
+                                                <div class="timeline-item">
+                                                    <h4 class="item-title">Curso de Especialização</h4>
+                                                    <span class="item-period">2023</span>
+                                                    <span class="item-small">TDC Business</span>
+                                                    <p class="item-description">Formação JavaScript e TypeScript.</p>
+                                                </div>
+                                                <!-- / Education 16 -->
                                             </div>
                                         </div>
                                     </div>
@@ -852,6 +879,45 @@ Possuo uma base sólida em bancos de dados relacionais e domino linguagens orien
                                             </a>
                                         </figure>
                                         <!-- /Portfolio Item 14 -->
+
+                                        <!-- Portfolio Item 15 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/15.jpeg" class="lightbox" title="Formação Web e Front-End">
+                                                <img src="images/portfolio/15.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Web e Front-End</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 15 -->
+
+                                        <!-- Portfolio Item 16 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/16.jpeg" class="lightbox" title="Formação Arquitetura .NET">
+                                                <img src="images/portfolio/16.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">Arquitetura .NET</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 16 -->
+
+                                        <!-- Portfolio Item 17 -->
+                                        <figure class="item" data-groups='["cursos"]'>
+                                            <a href="images/portfolio/17.jpeg" class="lightbox" title="Formação JavaScript e TypeScript">
+                                                <img src="images/portfolio/17.jpeg" alt="">
+                                                <div>
+                                                    <h5 class="name">JavaScript e TypeScript</h5>
+                                                    <small>Curso</small>
+                                                    <i class="fa fa-file-text-o"></i>
+                                                </div>
+                                            </a>
+                                        </figure>
+                                        <!-- /Portfolio Item 17 -->
 
                                         <!-- Portfolio Item 11 -->
                                         <figure class="item" data-groups='["recomendacoes"]'>
