--- a/index.html
+++ b/index.html
@@ -171,11 +171,17 @@
                                             <div class="block-title">
                                                 <h3>Um pouco sobre <span>mim</span></h3>
                                             </div>
-                                            <p>Olá! Sou um entusiasta desenvolvedor back-end, apaixonado por explorar novas tecnologias que possam aprimorar a qualidade de vida. Possuo formação em Sistemas de Informação e um Curso Técnico em Informática, conciliando estudos com experiência prática ao longo de <text id="servico"></text> anos na área de Informática. Durante esse período, desempenhei diversas funções, desde DevOps até desenvolvimento web, oferecendo soluções inovadoras para uma variedade de desafios, sem me restringir a uma única tecnologia.
-
-Minha trajetória profissional abrange ambientes diversos, desde pequenas até médias empresas, proporcionando uma visão abrangente do cenário tecnológico. Sou um aluno contínuo, apaixonado por mesclar tecnologias emergentes com tópicos acadêmicos, como engenharia de software, arquitetura de software, qualidade de software, entre outros.
-
-Possuo uma base sólida em bancos de dados relacionais e domino linguagens orientadas a objetos, como Delphi. Estou sempre em busca de desafios estimulantes e oportunidades para aplicar meu conhecimento e habilidades em prol do desenvolvimento tecnológico.</p>
+                                            <p>Olá! Sou um desenvolvedor back-end entusiasta, focado em explorar e integrar novas tecnologias para melhorar a 
+                                                qualidade de vida das pessoas. Tenho formação em Sistemas de Informação e um Curso Técnico em Informática, e 
+                                                ao longo de <text id="servico"></text> anos de experiência, venho conciliando teoria e prática na área de TI. 
+                                                Atuei em funções que vão desde DevOps até desenvolvimento web, sempre buscando soluções inovadoras e flexíveis, 
+                                                sem me limitar a uma única stack tecnológica.
+                                                Minha experiência abrange diferentes cenários, desde pequenas até médias empresas, permitindo-me obter uma visão 
+                                                completa do ecossistema tecnológico. Sou um eterno aprendiz, fascinado por combinar tecnologias emergentes com 
+                                                conceitos acadêmicos como engenharia de software, arquitetura e qualidade de software.
+                                                Tenho sólida experiência com bancos de dados relacionais e amplo domínio de linguagens orientadas a objetos, 
+                                                como Delphi. Estou constantemente em busca de novos desafios e oportunidades que me permitam aplicar minhas 
+                                                habilidades e contribuir para o avanço tecnológico.</p>
                                         </div>
                                       <!--  <div class="download-resume">
                                             <a href="cv/resume.pdf" class="btn btn-secondary" target="_blank">Download Currículo</a>
